# svm

./: CMakeLists.txt  Makefile  README.md
inc/: arch.hpp  constants.hpp  instructions.hpp  memory.hpp  single_core.hpp  single_core_util.hpp  trap.hpp
src/: and.cpp  main.cpp  memory.cpp  mov.cpp  neg.cpp  or.cpp  single_core.cpp  single_core_util.cpp  stack.cpp  utils.cpp  xchg.cpp  xor.cpp
test/: memory_test.cpp  single_core_test.cpp
